style: apply Google Java Format to entire codebase
- Reformat all Java files using Google Java Format GOOGLE style
- Update import organization and spacing according to Google standards
- Standardize code formatting across frontend TypeScript files
- No functional changes, only code style improvements for consistency

This massive formatting change ensures consistent code style across
the entire project following Google's Java style guide.